<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".setting.SettingActivity">

    <Switch
        android:id="@+id/releaseReminderSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:switchMinWidth="56dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:text="@string/release_reminder"
        android:textSize="18sp"
        android:checked="false"
        android:alpha="0.5"
        android:textOff="@string/off"
        android:textOn="@string/off" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <Switch
        android:id="@+id/dailyReminderSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:switchMinWidth="56dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:text="@string/daily_reminder"
        android:textSize="18sp"
        android:checked="false"
        android:alpha="0.5"
        android:textOff="@string/off"
        android:textOn="@string/off" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>


    <Button
        android:id="@+id/changeLanguageSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:alpha="0.5"
        android:textColor="#000"
        android:color="#55000000"
        android:shadowColor="@android:color/transparent"
        android:shadowRadius="@android:color/transparent"
        android:background="#00FFFFFF"
        android:text="@string/change_language_settings"
        android:gravity="start|center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>


</LinearLayout>